responsive, overflow fix

--- a/src/components/Hero.scss
+++ b/src/components/Hero.scss
@@ -43,6 +43,7 @@
         width: calc(100% + 4em);
         min-width: calc(414px + 1em);
         height: 100%;
+        max-width: 100vw;
         backdrop-filter: blur(20px);
         background: rgba($light, 0.2);
         background: linear-gradient(90deg, rgba($light, 0.0) 0%, rgba($light, 0.15) 20%, rgba($light, 0.2) 30%);
@@ -53,7 +54,6 @@
 
         @media (min-width: 768px) {
             border-radius: 0 0 40vh 0;
-
             left: -50vw;
             width: calc(100% + 50vw);
         }
