--- a/src/scss/_containers.scss
+++ b/src/scss/_containers.scss
@@ -51,6 +51,7 @@ section {
     max-width: 1280px;
     padding: 0 1em;
     z-index: 0;
+    overflow-x: hidden;
 
     &.left {
         align-items: center;
@@ -60,5 +61,9 @@ section {
 
     @media (min-width: 414px) {
         padding: 0 2em;
+    }
+
+    @media (min-width: 768px) {
+        overflow-x: visible;
     }
 }
